--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,6 +1,13 @@
-# Uncomment to enable encoder
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_ZMK_KEYBOARD_NAME="MyKeyb2"
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
-# Uncomment the following line to enable the Lily58 OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=120
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+#CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_USB=n
+
